[project]
name = "python-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "numpy==2.0.0",
    "pandas==2.3.3",
    "pdfkit==1.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "requests==2.32.3",
    "six==1.16.0",
    "tzdata==2024.1",
    "urllib3==2.2.2"
]
